<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_login"
    android:background="@color/fondo">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iniciar"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"

        />

    <TextView
        android:id="@+id/txtTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180sp"
        android:text="@string/texto"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"




 />


    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="230dp"
        android:hint="@string/correo"
        android:background="@color/blanco"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:background="@color/blanco"
        android:layout_marginRight="10dp"
        android:layout_marginTop="280dp"

        android:hint="@string/clave"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="330dp"
        android:text="@string/iniciarSes"
        android:textAllCaps="false"
        android:background="@color/botones"
        android:textColor="@color/blanco"

        />


    <ImageButton
        android:id="@+id/btn_huella"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="530dp"
        android:layout_centerHorizontal="true"
        android:background="@color/fondo"
        app:srcCompat="@mipmap/huella_100"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/LoginHuella"
        android:layout_marginTop="600dp"

        />
    </RelativeLayout>

</ScrollView>